Fixed layout issues on the order page and mobile photo sizing on several pages.

--- a/JampotCapstoneWebApp/JampotCapstone/wwwroot/css/site.css
+++ b/JampotCapstoneWebApp/JampotCapstone/wwwroot/css/site.css
@@ -148,14 +148,6 @@ body {
   color: var(--JampotYellow);
 }
 
-.first-element{
-    margin-left: auto;
-}
-
-.last-element{
-    margin-right: auto;
-}
-
 #instagram {
   width: 65px;
 }
